--- a/EAD/Assignment-1/index.html
+++ b/EAD/Assignment-1/index.html
@@ -67,7 +67,7 @@
                 <option value="motorCycle">MotorCycle</option>
                 <option value="fourWheelers">Four Wheelers </option>
             </select>
-            <br><br>
+            </br></br>
 
             Vehicle Number:
             <input id="vehicleNumber" type="text" name="vehicleNumber" required>
@@ -77,10 +77,11 @@
             <input id="empId" type="text" name="empId" required>
             </br></br>
 
-            Indentification:
+            Identification:
             <textarea cols="20"></textarea></br></br>
 
             <input type="submit" value="Add Vehicle" onclick="registerVehicle()">
+        </form>
     </div>
 
     <!--
@@ -107,7 +108,7 @@
                 <td id="yearlyPrice"></td>
             </tr>
         </table>
-        <br>
+        </br>
 
         <label><input type="radio" id="pricePlan" name="pricePlan" value="daily"
                 onchange="getPassOption(this.value)">Daily</label>
