--- a/EAD/Assignment-3/WebContent/searchStudent.html
+++ b/EAD/Assignment-3/WebContent/searchStudent.html
@@ -7,8 +7,8 @@
 <body>
 			<p>Search by First Name and Last Name:</p>
         <form id = "studentInformation" action="SearchStudent" method="get">
-            <input id="firstName" name="firstName" placeholder="first name"><br><br>
-            <input id="lastName" name="lastName" placeholder="last name"><br><br>
+            <input id="first_name" name="first_name" placeholder="first name"><br><br>
+            <input id="last_name" name="last_name" placeholder="last name"><br><br>
             <input type="submit"/>
         </form><br><br>
         
