--- a/EAD/Assignment-4/WebContent/loginForm.html
+++ b/EAD/Assignment-4/WebContent/loginForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-		<form id="employeeDetails" action="FetchEmployeeData" method="post">
+		<form action="FetchEmployeeData" method="post">
 			Email: <input type="text" id="email" name="email" required /><br /><br /> 
 			Password: <input type="password" id="password" name="password" required /><br /><br /> 
 			<input type="submit" value="Login">
