--- a/soql.html
+++ b/soql.html
@@ -4,19 +4,19 @@ SELECT Name, Sex__c, DOB__c FROM Student__c where Class__r.Name like 'X%'
 
 SELECT Class__r.Name, Name, Sex__c, DOB__c FROM Student__c
 
-//SELECT Name, (SELECT Name from students__r) FROM Class__c
+SELECT Name, (SELECT Name from students__r) FROM Class__c
 
-//SELECT name , class__r.classteacher__r.name,class__r.name from student__c where class__r.classteacher__r.name like 'V%
+SELECT name , class__r.classteacher__r.name,class__r.name from student__c where class__r.classteacher__r.name like 'V%
 
 SELECT Name, DOB__c FROM Student__c where CALENDAR_YEAR(DOB__c) > 1990
 
 SELECT Title, LastModifiedDate FROM Lead where LastModifiedDate = THIS_MONTH
 
-//SELECT Name, (SELECT Name from students__r where name like 's%') FROM Class__c
+SELECT Name, (SELECT Name from students__r where name like 's%') FROM Class__c
 
 SELECT Name FROM Teach__c WHERE Subject__c = 'Hindi;English'
 
-//SELECT FirstName__c FROM Students WHERE Subject__c = 'Hindi;Maths'
+SELECT FirstName__c FROM Students WHERE Subject__c = 'Hindi;Maths'
 
 SELECT MyCount__c FROM Class__c
 
